; ModuleID = '/home/carl/AnghaBench/netdata/libnetdata/socket/extr_socket.c_sock_enlarge_out.c'
source_filename = "/home/carl/AnghaBench/netdata/libnetdata/socket/extr_socket.c_sock_enlarge_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LARGE_SOCK_SIZE = common dso_local global i32 0, align 4
@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_SNDBUF = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [37 x i8] c"Failed to set SO_SNDBUF on socket %d\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sock_enlarge_out(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* @LARGE_SOCK_SIZE, align 4
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* %2, align 4
  %7 = load i32, i32* @SOL_SOCKET, align 4
  %8 = load i32, i32* @SO_SNDBUF, align 4
  %9 = call i32 @setsockopt(i32 %6, i32 %7, i32 %8, i32* %4, i32 4)
  store i32 %9, i32* %3, align 4
  %10 = load i32, i32* %3, align 4
  %11 = icmp eq i32 %10, -1
  br i1 %11, label %12, label %15

12:                                               ; preds = %1
  %13 = load i32, i32* %2, align 4
  %14 = call i32 @error(i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i32 %13)
  br label %15

15:                                               ; preds = %12, %1
  %16 = load i32, i32* %3, align 4
  ret i32 %16
}

declare dso_local i32 @setsockopt(i32, i32, i32, i32*, i32) #1

declare dso_local i32 @error(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
